assets/css/style.scss
---
---

@import '_variables.scss'; 

html,
body {
    height: 100%;
    background-color: $background-color; 
}

article {
    margin: 0 auto 150px;
}

blockquote {
    background-color: $cta-color-hover;
    border-radius: $rounded-corner;
    border-left: 0;
}

blockquote {
    word-wrap: break-word;
}

p,
ul {
    font-size: $font-size; 
    line-height: $line-height; 
}

code {
    background-color: rgba(70, 185, 160, 0.2);
    color: #333; 
}

p,
.row {
    margin-right: 0;
    margin-left: 0; 
}

.btn-lg.btn-success {
    border: 0; 
}

.no-margin {
    margin: 0 0 0 0; 
}

.no-padding {
    padding: 0 0 0 0;
} 

/* * * * * * * * * * * * * * 
 *
 * Navbar Styles 
 *
 *
 * * * * * * * * * * * * * */

.navbar,
.navbar-default {
    background-color: $background-color; 
    border-radius: 0;
    min-height: 60px; 
    padding: 25px 0px;
    transition: padding 0.3s ease 0s;
}

nav.navbar.navbar-default.shrink {
    padding: 10px 0; 
}

.navbar-nav > li:hover {
    border: 1px solid #4fc3a0;
}


.navbar-brand {
    margin-left: 20px;
    padding-top: 5px; 
    width: 240px; 
}


@media (min-width: 768px) {
    .navbar-brand img {
	max-height: 50px;
    }

}

.navbar-default .navbar-nav > li > a {
    color: $primary-text;
}

.nav > li > a {
    padding: 10px 13px;
}

#navbar-collapse-1 > ul > li {
    text-align: right; 
}

/* * * * * * * * * * * * * * 
 *
 * Sticky Footer
 *
 *
 * * * * * * * * * * * * * */

.page-wrapper {
    min-height: 100%;
    margin-bottom: -150px;  
}

.page-wrapper:after {
    content: "";
    display: block;
}

footer, 
.page-wrapper:after {
    height: 150px; 
}

/* * * * * * * * * * * * * * 
 *
 * Home Page Styles 
 *
 *
 * * * * * * * * * * * * * */


.intro-text > h1 {
    font-size: 55px; 
    text-align: left;
    color: $primary-text; 
}

@media (min-width: 500px) {
    .intro-text > h1 {
	font-size: 80px;
    }
}

@media (min-width: 970px) {
    .intro-text {
	width: 55%;
    }
    .intro-text > a {
	font-size: 20px; 
	width: 25%;
    }
}

.intro-text > a {
    display: block;
    text-align: center;
    min-height: 50px;
    padding-top: 20px;
    padding-bottom: 20px;
    font-size: $font-size; 
    font-weight: 500;
}

.service > div,
.dmptool > div,
.partner > div{
    border: 2px solid $box-edge;
    min-height: 200px;
    padding: 12px 20px;
    border-radius: 2px;
    margin-bottom: 25px; 
}

.dmptool > div > p {
    padding-top: 15px;
    margin-bottom: 25px; 
}

.dmptool > div {
    padding-bottom: 25px;
} 

.calendar-box:hover,
.service > div:hover, 
.dmptool > div:hover,
.partner > div:hover{
    border-color: $cta-color; 
}

.service > div > h3 {
    margin: 5px 0 15px;
    font-weight: 800;
    color: $primary-text; 
}

.service > div > p {
    margin-bottom: 25px;
    color: $secondary-text; 
}

.btn-success {
    background-color: $cta-color; 
}

.btn-success[disabled],
.btn-success[disabled]:focus,
.btn-success[disabled]:hover,
.btn-success[disabled]:active {
    background-color: #000; 
}

.btn-lg.btn-success:focus,
.btn-lg.btn-success:active:focus,
.btn-lg.btn-success:active,
.btn-success:hover, 
.btn-success:focus,
.btn-success:active:focus {
    background-color: $cta-color-hover;
    text-decoration: none; 
}

.citation {
    font-size: 10px;
    line-height: 1;
    margin: 0 15px;
}

#welcome > div.container > p.citation{
    position: absolute;
}

#timely-news {
    padding: 20px 0 4px;
    max-width: 1136px; 
    margin: 15px auto;
    border-radius: 15px;
}

@media (min-width: 500px) {
    #timely-news {
	width: 75%;
    }
}

#calendar {
    margin-top: 55px;
} 

div.calendar-box > h3::before {
    content: "";
    background-color: $cta-color; 
    background-repeat: no-repeat; 
    top: 0px; 
    left: 0;
    bottom: 0;
    right: 0;
    position: absolute;
    max-height: 25px;  
    margin: 0 15px; 
}

.calendar-box ul {
    list-style: none;
    padding: 0 20px; 
}

.calendar-box {
    border: 2px solid $box-edge;
    padding-top: 15px;
    margin-bottom: 25px; 
}

.calendar-box h3 {
    padding: 25px 0 0 25px;
    font-weight: 800;
    margin-bottom: 15px; 
}

.calendar-box h3 span {
    float: right;
    margin-right: 25px;
    font-size: 16px; ;
    color: $cta-color;
    font-weight: 400; 
}

.calendar-box a.calendar-more {
    display: inline-block;
    margin-top: 4px;
} 

.calendar-box a.calendar-more,
.calendar-box a.calendar-more:visited {
    color: $cta-color; 
}

.calendar-box a.calendar-more:hover,
.calendar-box a.calendar-more:active,
.caldenar-box a.calendar-more:focus {
    text-decoration: none;
}

@media (min-width: 768px) {
    
    .news-date {
	padding: 0;
	width: 10%; 
    }

    .news-title {
	max-width: 80%;
	border-left: 1px solid #D6D4D3; 
    }
    
    .news-item .news-date,
    .news-item .news-title,
    .news-item p,
    .news-item  .news-title-link {
	display: inline-block;
    }

    .news-item .news-title .news-title-link {
	display: inline-block;
	padding-left: 20px;
    } 
}

#timely-news .news-date {
    text-align: center; 
}


.news-date > p {
    padding: 5px 0 10px;
    font-weight: 800;
    color: $cta-color;
    font-size: 18px;
    text-align: left; 
}

.news-item .news-title .news-title-link {
    display: block; 
    color: $secondary-text;
    text-decoration: none;
    word-wrap: break-word;
}

#timely-news hr {
    width: 50%
}

#timely-news ul {
    list-style: none; 
}

#timely-news > h3 {
    text-align: center; 
    font-style: italic;
    text-decoration: underline;
}

#timely-news li.news-item:nth-of-type(n+6),
#timely-news hr:nth-of-type(n+6) {
    display: none; 
}

a.news-title  {
    color: #404040;
    text-decoration: none; 
}

#tool-tip {
    min-height: 400px; 
    text-align: center; 
}

#tool-tip h3 {
    text-align: center;
}

#tool-tip img {
    padding: 20px;
}

#tool-tip > div.container > div.col-md-4 > p {
    text-align: left;
    padding: 0 20px;
}

#tool-tip > div.container > div.col-md-8 > p:nth-child(3) {
    margin-bottom: 40px;
}
/* ... */

